v0.6.1 - 修复python脚本中使用CRLF导致无法执行的问题 - 增加bolt delete API - API返回值和参数修复，去除 " 和 [ 等符号
